[project]
name = "distance-estimation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
  "certifi>=2025.11.12",
  "desktop-notifier==6.2.0",
  "matplotlib==3.10.6",
  "numpy<2.0.0",
  "opencv-python>=4.0.0",
  "platformdirs==4.4.0",
  "pyinstaller==6.16.0",
  "scikit-learn==1.7.2",
  "timm>=1.0.22",
  "toga==0.5.2",
  "tqdm>=4.67.1",
]

[project.optional-dependencies]
cpu = ["torch>=2.2.0", "torchvision", "onnxruntime==1.23.0"]
cu128 = ["torch>=2.2.0", "torchvision", "onnxruntime-gpu[cuda,cudnn]==1.23.0"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu128" }]]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
